# pyramid-scheme-v3

./: .coolify-compose.yml  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.qreader  Dockerfile.worker  Gemfile  Procfile.dev  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
app/campaign_logic/: aces_campaign_logic.rb  base_campaign_logic.rb  construct_campaign_logic.rb  flavortown_campaign_logic.rb  hctg_campaign_logic.rb  sleepover_campaign_logic.rb
app/controllers/: application_controller.rb  banned_controller.rb  campaigns_controller.rb  custom_links_controller.rb  dashboard_controller.rb  errors_controller.rb  hcauth_controller.rb  health_controller.rb  landing_controller.rb  leaderboard_controller.rb  map_controller.rb  poster_groups_controller.rb  posters_controller.rb  proxy_controller.rb  sessions_controller.rb  settings_controller.rb  shop_controller.rb  shop_orders_controller.rb  video_submissions_controller.rb
app/helpers/: application_helper.rb  components_helper.rb  icon_helper.rb
app/models/: api_key.rb  (+19 more)
config/: application.rb  boot.rb  credentials.yml.enc  database.yml  deploy.yml  i18n-tasks.yml  importmap.rb  puma.rb  recurring.yml  routes.rb  shadcn.tailwind.js  sidekiq.yml  storage.yml  tailwind.config.js
db/: schema.rb  seeds.rb
proxy/: Dockerfile  main.py  pyproject.toml
public/: 400.html  404.html  406-unsupported-browser.html  422.html  500.html
qreader/: main.py  pyproject.toml
scripts/: geocode_backfill.rb  zero-downtime-deploy.sh
test/: test_helper.rb
(+217 files in other folders)
