[project]
name = "proxy-service"
version = "1.0.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "asyncpg>=0.30.0",
    "qrcode[pil]>=8.0",
    "reportlab>=4.0.0",
    "Pillow>=10.0.0",
    "pypdf>=4.0.0",
]

[tool.uv]
dev-dependencies = []
